# Financially

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  requirements.txt
backend/: app.py  backend_io.py
database/: database.py
frontend/: frontend_io.py  main.py
tests/: test_calculations.py
utilities/: calculator.py
